out/production/App Innovation Partners - FSC - Drive Wealth/objects/DW_Session__c.object
<CustomObject>
    <description>Object to store DriveWealth Session information.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce Account ID</description>
        <inlineHelpText>Salesforce Account ID</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DW Sessions</relationshipLabel>
        <relationshipName>DW_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether a session is still active.</description>
        <inlineHelpText>Shows whether a session is still active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DW_Session_Key__c</fullName>
        <description>Session Key as supplied by DriveWealth after session is set</description>
        <inlineHelpText>Session Key as supplied by DriveWealth after session is set</inlineHelpText>
        <label>DW Session Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_User_ID__c</fullName>
        <description>DriveWealth User ID</description>
        <externalId>true</externalId>
        <inlineHelpText>DriveWealth User ID</inlineHelpText>
        <label>DW User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DW Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DW Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DW Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>